<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/double_margin"
    tools:context=".ui.fragments.SecondFragment">

    <ImageView
        android:id="@+id/dog_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ic_add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBarrier"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <TextView
        android:id="@+id/dog_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineBarrier"
        style="@style/Common.Heading1"
        tools:text="MaDog"/>

    <TextView
        android:id="@+id/dog_age_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/dog_age_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_name_title"
        style="@style/Common.Heading2" />

    <TextView
        android:id="@+id/dog_gender_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/dog_gender_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_age_textview"
        style="@style/Common.Heading2"/>

    <TextView
        android:id="@+id/dog_personality_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dog_personality_display"
        android:clickable="false"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_gender_textview"
        style="@style/Common.Heading2" />
</androidx.constraintlayout.widget.ConstraintLayout>