<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SecondFragment">

    <ImageView
        android:id="@+id/dog_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBarrier"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dog_name_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:hint="@string/dog_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineBarrier">
        <EditText
            android:id="@+id/dog_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:background="@color/white"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLength="40"
            android:maxLines="1"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dog_age_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:hint="@string/dog_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_name_inputlayout">
        <EditText
            android:id="@+id/dog_age_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number"
            android:background="@color/white"
            android:lines="1"
            android:maxLength="3"
            android:maxLines="1"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/dog_gender"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_age_inputlayout" />

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/dog_gender"
        app:layout_constraintStart_toEndOf="@+id/dog_gender"
        style="@style/Common.CaptionError"
        tools:visibility="visible"
        tools:text="Select gender is mandatory" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dog_personality_inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:hint="@string/dog_personality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_gender">
        <EditText
            android:id="@+id/dog_personality_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:background="@color/white"
            android:lines="1"
            android:maxLength="40"
            android:maxLines="1"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_save"/>


</androidx.constraintlayout.widget.ConstraintLayout>